[gd_scene load_steps=27 format=3 uid="uid://c418k6jh0lbut"]

[ext_resource type="Script" path="res://Scripts/technician.gd" id="1_c7asy"]
[ext_resource type="Texture2D" uid="uid://u3rsxi8k5dtg" path="res://assets/shooting_bow_animation.png" id="2_4d0ye"]
[ext_resource type="Texture2D" uid="uid://dftpcldooaq6e" path="res://assets/run_centered.png" id="2_dc5fi"]
[ext_resource type="Texture2D" uid="uid://bjhi2rmncqjh8" path="res://assets/idle_centered.png" id="2_vaefd"]
[ext_resource type="Texture2D" uid="uid://guwvao47lvf" path="res://assets/rank.png" id="3_3w80t"]
[ext_resource type="Texture2D" uid="uid://vueyipe00530" path="res://assets/move_arrow.png" id="5_axkva"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q37qx"]
atlas = ExtResource("2_4d0ye")
region = Rect2(0, 0, 27, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_yulkn"]
atlas = ExtResource("2_4d0ye")
region = Rect2(27, 0, 27, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo0jf"]
atlas = ExtResource("2_4d0ye")
region = Rect2(54, 0, 27, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmd3o"]
atlas = ExtResource("2_4d0ye")
region = Rect2(81, 0, 27, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7mif"]
atlas = ExtResource("2_4d0ye")
region = Rect2(108, 0, 27, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n1ml"]
atlas = ExtResource("2_4d0ye")
region = Rect2(135, 0, 27, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_le3e5"]
atlas = ExtResource("2_4d0ye")
region = Rect2(162, 0, 27, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_j8qqu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q37qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yulkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo0jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmd3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7mif")
}],
"loop": false,
"name": &"charge",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n1ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le3e5")
}],
"loop": false,
"name": &"shoot",
"speed": 30.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_uoyoo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ru6ot"]
size = Vector2(9, 7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gt2ey"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.8, 0.8, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vbm1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hheoy"]
bg_color = Color(1.44392e-06, 0.673974, 0.76827, 1)

[sub_resource type="Animation" id="Animation_dulyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vaefd")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_hq2v2"]
resource_name = "Walk Down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.533333, 0.633333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dc5fi")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_nc0dw"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vaefd")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t2u8p"]
_data = {
"RESET": SubResource("Animation_dulyh"),
"Walk Down": SubResource("Animation_hq2v2"),
"idle": SubResource("Animation_nc0dw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4s52"]
size = Vector2(18, 22)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kq1xb"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3ur4u"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
anim_speed_min = 4.0
anim_speed_max = 4.0

[node name="technician" type="CharacterBody2D" node_paths=PackedStringArray("chill", "rank_sprite", "box", "anim", "spritee", "drop_button", "energy_bar", "energy_timer", "move_arrow", "drop_item_button", "bow") groups=["technician"]]
z_index = 1
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
input_pickable = true
motion_mode = 1
floor_stop_on_slope = false
script = ExtResource("1_c7asy")
chill = NodePath("Label")
rank_sprite = NodePath("TextureRect")
box = NodePath("Box")
anim = NodePath("AnimationPlayer")
spritee = NodePath("Sprite2D")
drop_button = NodePath("drop_item")
energy_bar = NodePath("Box/Panel")
energy_timer = NodePath("energy_timer")
move_arrow = NodePath("move_cursor")
drop_item_button = NodePath("drop_item")
bow = NodePath("bow")

[node name="bow" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(1, 2)
sprite_frames = SubResource("SpriteFrames_j8qqu")
animation = &"charge"
flip_h = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.247059)
y_sort_enabled = true
position = Vector2(-0.5, 8.78125)
scale = Vector2(19, 4.4375)
texture = SubResource("CanvasTexture_uoyoo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2.5)
shape = SubResource("RectangleShape2D_ru6ot")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -23)
texture = ExtResource("2_vaefd")
hframes = 13

[node name="Box" type="Panel" parent="."]
offset_left = -11.0
offset_top = -22.0
offset_right = 12.0
offset_bottom = 11.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gt2ey")

[node name="Panel" type="ProgressBar" parent="Box"]
layout_mode = 0
offset_left = 3.0
offset_top = -8.0
offset_right = 19.0
offset_bottom = -2.0
theme_override_styles/background = SubResource("StyleBoxFlat_1vbm1")
theme_override_styles/fill = SubResource("StyleBoxFlat_hheoy")
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t2u8p")
}

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 11.0
offset_top = -5.0
offset_right = 18.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_3w80t")
stretch_mode = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -2)
shape = SubResource("RectangleShape2D_r4s52")

[node name="drop_item" type="Button" parent="."]
offset_left = -21.0
offset_top = -12.0
offset_right = -9.0
theme_override_font_sizes/font_size = 6
expand_icon = true

[node name="Label" type="Label" parent="."]
offset_left = -33.0
offset_top = 3.0
offset_right = 7.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 8
text = "lol"

[node name="energy_timer" type="Timer" parent="."]

[node name="move_cursor" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_kq1xb")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_3ur4u")
texture = ExtResource("5_axkva")
lifetime = 0.3
one_shot = true
explosiveness = 1.0
fixed_fps = 60

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="button_down" from="drop_item" to="." method="_on_drop_item_button_down"]
[connection signal="timeout" from="energy_timer" to="." method="_on_energy_timer_timeout"]
